@@ -13,13 +13,9 @@
 
         <revision>003.004.000</revision>
 
-        <!-- BEGIN: Breaking bumps -->
         <jetty.version>9.4.44.v20210927</jetty.version> <!-- Problematic: 9.4.44.v20210927 -> 11.0.0 -->
         <mockito.version>1.10.19</mockito.version> <!-- Problematic: 1.10.19 -> 3.11.2 -->
         <sshd.version>2.7.0</sshd.version> <!-- Problematic: 1.7.0 -> 2.7.0 -->
-        <!-- END: Breaking bumps -->
-
-        <!-- <nav.security.token-support.version>1.3.7</nav.security.token-support.version> -->
         <apache.ftpserver.version>1.1.1</apache.ftpserver.version>
         <bcel.version>6.5.0</bcel.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
@@ -39,8 +35,8 @@
         <jacoco.version>0.8.3</jacoco.version>
         <jakarta.activation.version>1.2.2</jakarta.activation.version>
         <jakarta.ws.rs.version>2.1.5</jakarta.ws.rs.version>
-        <java.compilation.source.version>1.8</java.compilation.source.version>
-        <java.compilation.target.version>1.8</java.compilation.target.version>
+        <java.compilation.source.version>11</java.compilation.source.version>
+        <java.compilation.target.version>11</java.compilation.target.version>
         <javatuples.version>1.2</javatuples.version>
         <jersey.version>2.32</jersey.version>
         <jsch.version>0.1.55</jsch.version>
@@ -561,7 +557,7 @@
                             <transformers>
 
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>no.nav.okosynk.cli.CliMain</mainClass>
+                                    <mainClass>no.nav.okosynk.CliMain</mainClass>
                                 </transformer>
 
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
@@ -598,9 +594,6 @@
                 <configuration>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
-                    <!--
-                    <argLine>-Xmx2048m -XX:MaxPermSize=2048m</argLine>
-                    -->
                     <environmentVariables>
                         <TEST_ENV_001>TEST_ENV_001_VAL</TEST_ENV_001>
                         <test_env_002>test_env_002_val</test_env_002>
@@ -640,33 +633,6 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
-                    <!-- Threshold -->
-                    <!--
-                       | Bring in and edit if you want
-                       | the build to fail upon low coverage:
-                       -->
-                    <!--
-                    <execution>
-                        <id>coverage-check</id>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <rule>
-                                    <element>CLASS</element>
-                                    <limits>
-                                        <limit>
-                                            <counter>LINE</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>10%</minimum>
-                                        </limit>
-                                    </limits>
-                                </rule>
-                            </rules>
-                        </configuration>
-                    </execution>
-                    -->
                 </executions>
             </plugin>
 
@@ -714,7 +680,7 @@
                             <finalName>okosynk</finalName>
                             <archive>
                                 <manifest>
-                                    <mainClass>no.nav.okosynk.cli.CliMainWithTestScope</mainClass>
+                                    <mainClass>no.nav.okosynk.metrics.CliMainWithTestScope</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
